# N-Body-Simulation

./: CMakeLists.txt  README.md  main.cpp
CPU/: DataStructures.cpp  DataStructures.h  Physics.cpp  Physics.h
CPU/Controls/: Camera.cpp  Camera.h  Mouse.cpp  Mouse.h  Settings.h
CPU/Objects/: Features.h  Item.cpp  Item.h
CPU/Objects/Shapes/: Feature.cpp  Feature.h  Shapes.cpp  Shapes.h
CPU/Render/: Program.h  Render.cpp  Render.h
CPU/Transformations/: Basis.cpp  Basis.h
CPU/Transformations/Rotations/: Quaternions.cpp  Quaternions.h
GPU/ExtShaders/: Compute.glsl
GPU/Shaders/: Fragment.glsl  Quaternions.glsl  Shader.cpp  Shader.h  Vertex.glsl
Glad/: glad.c  glad.h
Render/: Render.cpp  Render.h
utils/: Vertices.h  parser.h  spheres.h
